Fix spacing for markbot

--- a/css/main.css
+++ b/css/main.css
@@ -41,15 +41,16 @@ h2 {
   font-weight: bold;
   color: #fff;
   margin: 0;
+  line-height: 1.4;
 }
 
 strong {
-  background-color: rgba (0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, .5);
 }
 
 p {
   font-size: 2rem;
-  font-weight: bolder;
+  font-style: italic;
   font-family: "Open Sans", sans-serif;
   margin-top: 1rem;
   margin-bottom: 1.5rem;
